JVM uses excessive memory with -XX:+EnableJVMCI -XX:JVMCICounterSize=2147483648

XMLWordPrintable

    • b15

        There should be a reasonable range check for this flag, so it doesn't use excessive memory.

        Currently, -XX:JVMCICounterSize=2147483648 is actually tested by
        runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java. However, -XX:+EnableJVMCI is not specified, so the JVM fails to launch with

        Improperly specified VM option 'JVMCICounterSize': 'EnableJVMCI' must be enabled
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.

        However, if this test is executed with -XX:+EnableJVMCI, it will allocate so much memory that my machine will be unresponsive for about 2 minuets.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: