8237045: JVM uses excessive memory with -XX:+EnableJVMCI -XX:JVMCICounterSize=2147483648

Limit JVMCICounterSize flag's value range to 1M

Reviewed-by: thartmann, redestad