test/hotspot/jtreg/runtime/CommandLine/OptionsValidation/common/optionsvalidation/JVMOptionsUtils.java
@@ -185,6 +185,10 @@ public class JVMOptionsUtils {
             option.addPrepend("-XX:+UseNUMA");
         }
 
+        if (name.contains("JVMCI")) {
+            option.addPrepend("-XX:+EnableJVMCI");
+        }
+
         switch (name) {
             case "MinHeapFreeRatio":
                 option.addPrepend("-XX:MaxHeapFreeRatio=100");
@@ -222,6 +226,12 @@ public class JVMOptionsUtils {
                 break;
             case "TLABWasteIncrement":
                 option.addPrepend("-XX:+UseParallelGC");
+                break;
+            case "BootstrapJVMCI":
+            case "PrintBootstrap":
+            case "JVMCIThreads":
+            case "JVMCIHostThreads":
+                option.addPrepend("-XX:+UseJVMCICompiler");
                 break;
             default:
                 /* Do nothing */
